--- a/Low level feature analysis (Semi-supervised)/sparse_feature_classifier.ipynb
+++ b/Low level feature analysis (Semi-supervised)/sparse_feature_classifier.ipynb
@@ -188,7 +188,7 @@
             "source": [
                 "# Extract features from the full dataset\n",
                 "# Set max_samples to a smaller number for quick testing\n",
-                "MAX_SAMPLES = None  # Set to e.g., 100000 for faster testing\n",
+                "MAX_SAMPLES = None \n",
                 "\n",
                 "print(\"Extracting bottleneck features...\")\n",
                 "\n",
